--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,7 +157,8 @@ header nav li a:hover {
 }
 
 .container-footer .cart-bitmap .title {
-  margin: 50px 170px;
+  margin-top: 90px;
+  margin-left: 160px;
 }
 
 .container-footer .cart-bitmap .title h1 {
@@ -169,7 +170,7 @@ header nav li a:hover {
 }
 
 .container-footer .cart-bitmap .content-text {
-  margin-top: 70px;
+  margin-top: 40px;
   color: #fff;
   font-family: "anekLigth";
   font-size: 14px;
