--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -144,8 +144,8 @@ header{
         }
 
         .title{
-            margin: 50px 170px;
-            
+            margin-top: 90px;
+            margin-left: 160px;
             h1{
                 color: #fff;
                 font-family: "iceberg";
@@ -155,7 +155,7 @@ header{
             }
         }
         .content-text{
-            margin-top: 70px;
+            margin-top: 40px;
             color: #fff;
             font-family: "anekLigth";
             font-size: 14px;
